cmake_minimum_required(VERSION 3.16)
#project(SimpleNetworking)
set(CMAKE_CXX_STANDARD 20)
set(THREADS_PREFER_PTHREAD_FLAG ON)
#find_package(Threads REQUIRED)

#include_directories(asio/include)
#include_directories(NetCommon)
#add_executable(SimpleNetworking main.cpp NetClient/SimpleClient.cpp NetCommon/blcl_net.h)

project(NetCommon)
set(CMAKE_CXX_STANDARD 20)
include_directories(includes/asio/asio/include)
#add_library(NetCommon NetCommon/net_common.h NetCommon/net_message.h)
find_package(Threads REQUIRED)

project(SimpleClient)
set(CMAKE_CXX_STANDARD 20)
include_directories(includes/asio/asio/include)
include_directories(NetCommon)
add_executable(SimpleClient NetClient/SimpleClient.cpp NetCommon/blcl_net.h)
target_link_libraries (SimpleClient PRIVATE Threads::Threads)

project(SimpleServer)
set(CMAKE_CXX_STANDARD 20)
include_directories(includes/asio/asio/include)
include_directories(NetCommon)
add_executable(SimpleServer NetServer/SimpleServer.cpp NetCommon/blcl_net.h)
target_link_libraries (SimpleServer PRIVATE Threads::Threads)
